Fix z-index of top link

--- a/less/theme-common.less
+++ b/less/theme-common.less
@@ -948,7 +948,7 @@ a#link-to-top {
     right: 0px;
     background-color: #fff;
     border-top: 1px solid @hr-border;
-    z-index: 5;
+    z-index: 8;
 
     .container {
         position: relative;
